[project]
name = "marl-h&s-simulator"
version = "0.1.0"
description = "Hide-and-Seek: A Multi-Agent Reinforcement Learning Simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.2",
    "numpy==2.2.5",
    "matplotlib==3.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "ruff==0.11.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"